# repo-main

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  integration.yml  notify-packager.yml
scripts/: run_local.sh
src/: main.cpp  version.h.in
tests/: test_config.h  test_main.cpp
